K8S/certificate-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: certificateservice-srv
spec:
  type: NodePort
  selector:
    app: certificateservice
  ports:
    - name: certificateservice
      protocol: TCP
      port: 8080         # ClusterIP port for internal communication
      targetPort: 8080    # The port the container listens on
      nodePort: 32095     # The external NodePort for accessing the service from outside the cluster
