K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/Certificates"
        backend:
          service:
            name: certificates-clusterip-srv
            port: 
              number: 8080
      - pathType: Prefix
        path: "/api/s/certificates"
        backend:
          service:
            name: skills-clusterip-srv
            port: 
              number: 8080
